[package]
name = "twig"
version = "0.1.0"
edition = "2024"

[dependencies]
termcolor = "1.4"
chrono = "0.4"
lazy_static = "1.4.0"
sysinfo = "0.30"
machine-uid = "0.5"
dirs = "5.0"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tower = "0.4"
rand = "0.8"