[package]
name = "twig"
version = "0.2.5"
edition = "2024"

[dependencies]
termcolor = "1.4"
chrono = "0.4"
lazy_static = "1.4.0"
sysinfo = "0.30"
machine-uid = "0.5"
dirs = "5.0"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dashmap = "5.5"
tower = "0.4"
rand = "0.8"
dotenvy = "0.15"
regex = "1"
once_cell = "1.21.3"
ip-lookup = "0.1.3"
futures = "0.3.31"
itertools = "0.14.0"
sha2 = "0.10.9"
base64 = "0.22.1"
libc = "0.2"
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
num_cpus = "1.17.0"
linux-sysinfo = "0.1.0"

[build-dependencies]
bindgen = "0.69"
num_cpus = "1.16.0"

[features]
default = []
musl-vendored = ["dep:openssl"]